--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -13,7 +13,7 @@
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_test_living"
             android:layout_width="wrap_content"
-
+            android:visibility="invisible"
             android:layout_height="wrap_content"
             android:text="直播" />
 
