--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.test.testh264sender.ui.ScreenRecordVC">
+    tools:context="com.test.testh264sender.view.ScreenRecordVC">
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="wrap_content"
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="start record" />
+        android:text="开始" />
 
 
 </RelativeLayout>
